# OpenCV-plate

app/: CMakeLists.txt
app/src/main/cpp/: CarColorPlateLocation.cpp  CarColorPlateMatches.cpp  CarColorPlateMatches.hpp  CarPlateLocation.cpp  CarPlateRecgnize.cpp  ImgColorPlateLocation.cpp  ImgColorPlateLocation.hpp  ImgPlateLocation.cpp  ImgPlateLocation.hpp  ImgPlateMatches.cpp  ImgPlateMatches.hpp  ImgPlateRecgnize.cpp  ImgPlateRecgnize.hpp  common.h  cv-lib.cpp  native-lib.cpp
app/src/main/cpp/include/opencv2/: xfeatures2d.hpp
app/src/main/java/com/lichao/opencv_carplate/: MainActivity.java
app/src/main/java/com/zbq/opencv/: CVUtil.java  MainActivity.java
